# sentinel-trade

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
examples/: ccxt_bot.py  fill_degradation.py  quickstart.py
sentinel/: __init__.py  alerts.py  caps.py  config.py  core.py  decorators.py  events.py  exceptions.py  fills.py  heartbeat.py  reconcile.py  slippage.py  state.py
sentinel/brokers/: __init__.py  base.py  ccxt_adapter.py  ibkr_adapter.py
tests/: test_alerts.py  test_caps.py  test_events.py  test_fills.py  test_heartbeat.py  test_integration.py  test_reconcile.py  test_slippage.py  test_state.py
